--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         run: nuget restore LSTexpress\LSTexpressCS\LSTexpress.sln
 
       - name: Build YimMenuAutoChs
-        run: msbuild.exe LSTexpress\LSTexpressCS\LSTexpress.sln /p:platform="x64" /p:configuration="Release"
+        run: msbuild.exe LSTexpress\LSTexpressCS\LSTexpress.sln 
       - name: Upload Artifact
         uses: actions/upload-artifact@v3
         with:
