--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,5 +37,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: LSTexpress-CS
-          path:     rubbish\LSTexpress\LSTexpressCS\bin\
+          path:     rubbish0\
         
